baml_language/crates/baml_tests/snapshots/compiles/type_annotation/baml_tests__type_annotation__02_parser__valid_chains.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_repeated_type"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT
              KW_LET "let"
              WORD "x"
              COLON ":"
              TYPE_EXPR "int"
                WORD "int"
              COLON ":"
              TYPE_EXPR "int"
                WORD "int"
              COLON ":"
              TYPE_EXPR "int"
                WORD "int"
              COLON ":"
              TYPE_EXPR "int"
                WORD "int"
              COLON ":"
              TYPE_EXPR "int"
                WORD "int"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_single_type"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT
              KW_LET "let"
              WORD "x"
              COLON ":"
              TYPE_EXPR "string"
                WORD "string"
          EQUALS "="
          STRING_LITERAL "hello"
            QUOTE """
            WORD "hello"
            QUOTE """
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_class_destructure"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT
              KW_LET "let"
              WORD "x"
              COLON ":"
              TYPE_EXPR "Animal"
                WORD "Animal"
              L_BRACE "{"
              PATTERN_FIELD "name"
                WORD "name"
              R_BRACE "}"
          EQUALS "="
          OBJECT_LITERAL
            WORD "Animal"
            L_BRACE "{"
            OBJECT_FIELD
              WORD "name"
              COLON ":"
              STRING_LITERAL "Rex"
                QUOTE """
                WORD "Rex"
                QUOTE """
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_destructure_then_same_type"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT
              KW_LET "let"
              WORD "x"
              COLON ":"
              TYPE_EXPR "Animal"
                WORD "Animal"
              L_BRACE "{"
              PATTERN_FIELD "name"
                WORD "name"
              R_BRACE "}"
              COLON ":"
              TYPE_EXPR "Animal"
                WORD "Animal"
          EQUALS "="
          OBJECT_LITERAL
            WORD "Animal"
            L_BRACE "{"
            OBJECT_FIELD
              WORD "name"
              COLON ":"
              STRING_LITERAL "Rex"
                QUOTE """
                WORD "Rex"
                QUOTE """
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_type_then_destructure"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT
              KW_LET "let"
              WORD "x"
              COLON ":"
              TYPE_EXPR "Dog"
                WORD "Dog"
              COLON ":"
              TYPE_EXPR "Dog"
                WORD "Dog"
              L_BRACE "{"
              PATTERN_FIELD "breed"
                WORD "breed"
              R_BRACE "}"
          EQUALS "="
          OBJECT_LITERAL
            WORD "Dog"
            L_BRACE "{"
            OBJECT_FIELD
              WORD "name"
              COLON ":"
              STRING_LITERAL "Rex"
                QUOTE """
                WORD "Rex"
                QUOTE """
            COMMA ","
            OBJECT_FIELD
              WORD "breed"
              COLON ":"
              STRING_LITERAL "Lab"
                QUOTE """
                WORD "Lab"
                QUOTE """
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_widen_to_union"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT
              KW_LET "let"
              WORD "x"
              COLON ":"
              TYPE_EXPR "int[]"
                WORD "int"
                L_BRACKET "["
                R_BRACKET "]"
              PIPE "|"
              TYPE_EXPR "string[]"
                WORD "string"
                L_BRACKET "["
                R_BRACKET "]"
          EQUALS "="
          ARRAY_LITERAL "[1, 2, 3]"
            L_BRACKET "["
            INTEGER_LITERAL "1"
            COMMA ","
            INTEGER_LITERAL "2"
            COMMA ","
            INTEGER_LITERAL "3"
            R_BRACKET "]"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_widen_then_narrow"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT
              KW_LET "let"
              WORD "x"
              COLON ":"
              TYPE_EXPR "int[]"
                WORD "int"
                L_BRACKET "["
                R_BRACKET "]"
              PIPE "|"
              TYPE_EXPR "string[]"
                WORD "string"
                L_BRACKET "["
                R_BRACKET "]"
              COLON ":"
              TYPE_EXPR "int[]"
                WORD "int"
                L_BRACKET "["
                R_BRACKET "]"
          EQUALS "="
          ARRAY_LITERAL "[1, 2, 3]"
            L_BRACKET "["
            INTEGER_LITERAL "1"
            COMMA ","
            INTEGER_LITERAL "2"
            COMMA ","
            INTEGER_LITERAL "3"
            R_BRACKET "]"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
